--- a/src/main/resources/templates/newPost.html
+++ b/src/main/resources/templates/newPost.html
@@ -67,7 +67,7 @@
 
                     <div class="form-group">
                         <input type="text" id="title" th:field="*{title}" class="form-control"
-                               placeholder="제목을 입력하세요" name="title"/>
+                               placeholder="제목을 입력하세요" name="title" required/>
                     </div>
 
                     <div class="form-group text-left d-none">
