--- a/src/main/resources/templates/postView.html
+++ b/src/main/resources/templates/postView.html
@@ -87,7 +87,8 @@
             <div class="d-flex justify-content-between ml-4">
                 <h6 id="boardTitle" class="text-left mb-4 mt-5 fs-6"></h6>
                 <div class="text-center mt-5 pt-2 mr-2">
-                    <a th:if="${isowner}" th:href="@{/post/new(id=${post.id})}" class="btn btn-secondary text-white me-2 mr-1 btn-sm">수정</a>
+                    <a th:if="${isowner}"
+                       th:href="@{/post/new(id=${post.id}, board=${post.boardId})}"  class="btn btn-secondary text-white me-2 mr-1 btn-sm">수정</a>
                     <button th:if="${isowner}" class="btn btn-secondary btn-sm" id="deletePostBtn" th:attr="data-post-id=${post.id}">삭제</button>
                     <button th:if="${isowner}" class="btn btn-primary btn-sm d-none" id="savePostBtn">저장</button>
                 </div>
