--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -21,36 +21,41 @@
             </div>
         </div>
     </div>
-</div>
 
-<!-- 회원가입 폼 -->
-<div class="signup-container">
-    <form action="/member/save" method="post">
-        <div class="signup-title">회원가입</div>
+    <!-- 회원가입 폼 -->
+    <div class="signup-container">
+        <form action="/member/save" method="post">
+            <div class="signup-title">회원가입</div>
 
-        <div class="form-group mb-4">
-            <label for="nickname">닉네임</label>
-            <input type="text" id="nickname" name="nickname" class="form-control" placeholder="입력" required>
-            <div id="nickname-feedback" class="mt-2" style="font-size: 14px;"></div>
-        </div>
+            <div class="form-group mb-4">
+                <label for="nickname">닉네임</label>
+                <input type="text" id="nickname" name="nickname" class="form-control" placeholder="입력" required maxlength="8">
+                <div id="nickname-feedback" class="mt-2" style="font-size: 14px;"></div>
+            </div>
 
-        <div class="form-group mb-4">
-            <label for="username">이메일</label>
-            <input type="email" id="username" name="username" class="form-control" placeholder="입력" required>
-            <div id="username-feedback" class="mt-2" style="font-size: 14px;"></div>
-        </div>
+            <div class="form-group mb-4">
+                <label for="username">이메일</label>
+                <input type="text" id="username" name="username" class="form-control" placeholder="입력" required>
+                <div id="username-feedback" class="mt-2" style="font-size: 14px;"></div>
+            </div>
 
-        <div class="form-group mb-4">
-            <label for="password">비밀번호</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="입력" required>
-        </div>
+            <div class="form-group mb-4">
+                <label for="password">비밀번호</label>
+                <input type="password" id="password" name="password" class="form-control" placeholder="입력" required>
+            </div>
 
-        <div class="text-center">
-            <button type="submit" class="btn btn-signup">가입</button>
-        </div>
-    </form>
-</div>
+            <div class="form-group mb-4">
+                <label for="confirm-password">비밀번호 확인</label>
+                <input type="password" id="confirm-password" class="form-control" placeholder="다시 입력" required>
+                <div id="password-match-feedback" class="mt-2" style="font-size: 14px;"></div>
+            </div>
 
-<script src="/js/signup.js" defer></script>
+            <div class="text-center">
+                <button type="submit" class="btn btn-signup">가입</button>
+            </div>
+        </form>
+    </div>
+
+    <script src="/js/signup.js" defer></script>
 </body>
 </html>
