fix : 게시판 순서 변경

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -26,6 +26,13 @@
                 </a>
             </li>
 
+            <li style="margin-bottom: 8px;">
+                <a href="/post?board=3" class="nav-link text-dark d-flex align-items-center pl-3 py-2">
+                    <span class="mr-2" style="font-size: 1.2rem;">📝</span>
+                    <span>운동일지</span>
+                </a>
+            </li>
+
             <!-- 크루 드롭다운 메뉴 -->
             <li class="nav-item" style="margin-bottom: 8px;">
                 <a href="#" id="crewMenuToggle" class="nav-link text-dark d-flex align-items-center pl-3 py-2" style="position: relative;">
@@ -35,10 +42,7 @@
                 </a>
                 <ul id="crewSubmenu" class="submenu pl-4" style="display: block; list-style-type: none;">
                     <li style="margin-bottom: 8px;">
-                        <a href="/post?board=3" class="nav-link text-dark py-1 d-block" style="font-size: 14px;">ㄴ🏠홈</a>
-                    </li>
-                    <li style="margin-bottom: 8px;">
-                        <a href="/post?board=4" class="nav-link text-dark py-1 d-block" style="font-size: 14px;">ㄴ📝게시판</a>
+                        <a href="/post?board=4" class="nav-link text-dark py-1 d-block" style="font-size: 14px;">ㄴ🏠홈</a>
                     </li>
                     <li style="margin-bottom: 8px;">
                         <a href="/post?board=5" class="nav-link text-dark py-1 d-block" style="font-size: 14px;">ㄴ🔔공지사항</a>
