--- a/src/main/resources/templates/postList.html
+++ b/src/main/resources/templates/postList.html
@@ -95,7 +95,7 @@
                 const boardNames = {
                     1: "📄 공지사항",
                     2: "💬 소통게시판",
-                    4: "📝 게시판",
+                    3: "📝 운동일지",
                     5: "🔔 공지사항",
                     6: "🗣️ 소통하기"
                 };
