--- a/src/main/resources/templates/postView.html
+++ b/src/main/resources/templates/postView.html
@@ -257,9 +257,9 @@
             const boardNames = {
                 1: "📄 공지사항",
                 2: "💬 소통게시판",
-                4: "📝게시판",
-                5: "🔔공지사항",
-                6: "🗣️소통하기"
+                3: "📝 운동일지",
+                5: "🔔 공지사항",
+                6: "🗣️ 소통하기"
             };
 
             if (boardTitle && boardId) {
