--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>게시글 목록</title>
+    <title>RUN TIME</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </div>
-
+    </div>
 </section>
 </body>
 </html>
