feat : 관리자 페이지 검색 API 구현

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -42,13 +42,13 @@
                 </a>
                 <ul id="crewSubmenu" class="submenu pl-4" style="display: block; list-style-type: none;">
                     <li style="margin-bottom: 8px;">
-                        <a href="/post?board=4" class="nav-link text-dark py-1 d-block" style="font-size: 14px;">ㄴ🏠홈</a>
+                        <a href="/post?board=4" class="nav-link text-dark py-1 d-block" style="font-size: 14px;">ㄴ🏠크루메인</a>
                     </li>
                     <li style="margin-bottom: 8px;">
-                        <a href="/post?board=5" class="nav-link text-dark py-1 d-block" style="font-size: 14px;">ㄴ🔔공지사항</a>
+                        <a href="/post?board=5" class="nav-link text-dark py-1 d-block" style="font-size: 14px;">ㄴ🔔크루공지</a>
                     </li>
                     <li style="margin-bottom: 8px;">
-                        <a href="/post?board=6" class="nav-link text-dark py-1 d-block" style="font-size: 14px;">ㄴ🗣️소통하기</a>
+                        <a href="/post?board=6" class="nav-link text-dark py-1 d-block" style="font-size: 14px;">ㄴ🗣️크루소통</a>
                     </li>
                 </ul>
             </li>
