--- a/src/main/resources/templates/postList.html
+++ b/src/main/resources/templates/postList.html
@@ -111,8 +111,8 @@
                     1: "📄 공지사항",
                     2: "💬 소통게시판",
                     3: "📝 운동일지",
-                    5: "🔔 공지사항",
-                    6: "🗣️ 소통하기"
+                    5: "🔔 크루공지",
+                    6: "🗣️ 크루소통"
                 };
 
                 if (boardTitle && boardId) {
