--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -67,12 +67,37 @@
                     </div>
                 </div>
 
-                <div id="member-section" style="display:none; font-size: 13px;">
+                <!-- 게시글 목록 영역 -->
+                <div id="post-section" style="display:none; font-size: 13px;">
+                    <div class="d-flex">
+                        <select id="board-filter" class="form-control mr-2">
+                            <option value="">전체 게시판</option>
+                            <option value="1">공지사항</option>
+                            <option value="2">소통게시판</option>
+                            <option value="3">운동일지</option>
+                            <option value="4">크루메인</option>
+                            <option value="5">공지사항</option>
+                            <option value="6">소통하기</option>
+                        </select>
+                    <input type="text" id="post-search-input" class="form-control mr-2" placeholder="제목 검색">
+                    <input type="text" id="post-author-input" class="form-control mr-2" placeholder="작성자 검색">
+
+                        <button id="post-search-btn" class="btn btn-primary">검색</button>
+                    </div>
+
+                    <select id="sort-order-client" class="form-control mr-2 mt-3">
+                        <option value="">정렬 선택</option>
+                        <option value="desc">최신순</option>
+                        <option value="asc">오래된순</option>
+
+                    </select>
+
                     <!-- 게시글 테이블 -->
                     <table class="table table-bordered table-striped" id="post-table">
                         <thead>
                         <tr>
                             <th>게시글 ID</th>
+                            <th>게시판</th>
                             <th>제목</th>
                             <th>작성자</th>
                             <th>작성일</th>
@@ -84,6 +109,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <script src="/js/admin-members.js" defer></script>
