--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -13,7 +13,7 @@
             <div class="d-flex justify-content-between mb-3">
                 <div>
                     <a th:href="@{/notes(type='received')}" th:classappend="${type} == 'received' ? 'active' : ''">받은 쪽지</a>
-                    <a th:href="@{/notes(type='sent')}" th:classappend="${type} == 'sent' ? 'active' : ''">보낸 쪽지</a>
+                    <a class=ml-3 th:href="@{/notes(type='sent')}" th:classappend="${type} == 'sent' ? 'active' : ''">보낸 쪽지</a>
                 </div>
                 <div class="text-center">
                     <a href="/note/new" class="btn btn-dark btn-sm shadow-sm">쪽지보내기</a>
@@ -22,22 +22,22 @@
 
             <div class="mt-4">
                 <table class="table table-hover">
-                    <thead class="table-light">
+                    <thead class="table-light col-md-12">
                     <tr>
-                        <th>메세지</th>
-                        <th th:text="${type} == 'received' ? '보낸 사람' : '받은 사람'">상대</th>
-                        <th>시간</th>
+                        <th class="col-md-6 pl-4 pr-3">메세지</th>
+                        <th class="col-md-3" th:text="${type} == 'received' ? '보낸 사람' : '받은 사람'">상대</th>
+                        <th class="col-md-3">시간</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tbody>
                     <tr th:each="note : ${notes}">
-                        <td colspan="3" class="p-0">
+                        <td colspan="3" class="p-0 col-md-12">
                             <a th:href="@{'/note/' + ${note.id} + '?type=' + ${type}}"
                                class="d-flex justify-content-between align-items-center text-decoration-none text-dark px-3 py-2 border-bottom">
-                                <span th:text="${note.message}">쪽지 내용</span>
-                                <span th:text="${type == 'received' ? note.sender.nickname : note.receiver.nickname}">닉네임</span>
-                                <span th:text="${#temporals.format(note.sentAt, 'yyyy-MM-dd HH:mm')}">보낸 시간</span>
+                                <div class="col-md-6 pl-2"><span th:text="${note.message}">쪽지 내용</span></div>
+                                <div class="col-md-3"><span th:text="${type == 'received' ? note.sender.nickname : note.receiver.nickname}">닉네임</span></div>
+                                <div class="col-md-3"><span th:text="${#temporals.format(note.sentAt, 'yyyy-MM-dd HH:mm')}">보낸 시간</span></div>
                             </a>
                         </td>
                     </tr>
