fix : 게시글 조회 수정

--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -69,6 +69,7 @@
 
                 <!-- 게시글 목록 영역 -->
                 <div id="post-section" style="display:none; font-size: 13px;">
+                    <button id="load-all-posts" class="btn btn-outline-danger mt-3">전체보기</button>
                     <div class="d-flex">
                         <select id="board-filter" class="form-control mr-2">
                             <option value="">전체 게시판</option>
